  (#2989209 - Alan Ezust)

- In conjunction with the fix for tracker 3134215, added a new option to the
  General options pane to let the user choose whether to restore the split
  configuration. (Dale Anson)

- If jEdit doesn't have rights to save a buffer, the dialog doesn't display
  an exception anymore, making the error message less dramatic.
  (Matthieu Casanova)

}}}
{{{ Miscellaneous
- VFS Browser jobs now use the new Task api (Matthieu Casanova)

- MiscUtilities.expandVariables() now recognizes %varname% on Windows,
  meaning it can reverse what MiscUtilities.abbreviate() does. (Alan Ezust).

- Global options now use properties to display options tree
  (Matthieu Casanova)

- Update Java installer generated *nix launcher to be the same as the one in
  the native *nix packages (Björn "Vampire" Kautler)

- Add some quotes and explicit variable markers to *nix launcher
  (Björn "Vampire" Kautler)

- New property for the edit modes : contextInsensitive.
  By default the value is false, but if set to true the color highlight of
  a line of the buffer do not depends on the previous line. It works of course
  only for modes that do not have multiline comments and no tokens that can be
  on several lines (like literal in several languages)
  This cause major performances improvement on buffers that use an edit mode
  that is context insensitive.
  The following modes are now context insensitive :
  assembly-agc
  assembly-ags
  assembly-m68k
  assembly-mcs51
  assembly-parrot
  assembly-r2000
  assembly-x86
  awk
  cobol
  csv
  csv-commits
  eiffel
  foxpro
  hex
  htaccess
  hxml
  icon
  ini
  jmk
  json
  mqsc
  outline
  props
  ptl
  pvwave
  rfc
  rib
  rpmspec
  sip
  splus
  sqr
  squidconf
  svn-commit
  text
  vhdl
  visualbasic
  yab

- When editing a big file, a dialog will suggest to disable syntax
  highlight or make it context-insensitive so that jEdit remains fast
  (Matthieu Casanova)

- In mode syntax file, SPAN_REGEXP can now end with a regex